@@ -1,3 +1,12 @@
+2012-04-20  Julian Gilbey  <julian@d-and-j.net>  (tiny change)
+
+	* info/footnotes.c,
+	* info/infodoc.c,
+	* info/infomap.c,
+	* info/session.c: use "%s" as first arg to info_error,
+	even with constant strings, to pacify -Wformat-security.
+	http://bugs.debian.org/656659.
+
 2012-04-20  Karl Berry  <karl@gnu.org>
 
 	* util/texi2dvi: more doc on --dvipdf, spelling.
